frontend/tiger.output
Gramática

    0 $accept: program $end

    1 program: exp

    2 decs: dec decs
    3     | dec

    4 dec: tydecs
    5    | vardec
    6    | fundecs

    7 tydec: TYPE ID EQ ty

    8 tydecs: tydec
    9       | tydec tydecs

   10 ty: ID
   11   | LBRACE tyfields RBRACE
   12   | ARRAY OF ID

   13 tyfields: %empty
   14         | ID COLON ID
   15         | ID COLON ID COMMA tyfields

   16 vardec: VAR ID ASSIGN exp
   17       | VAR ID COLON ID ASSIGN exp

   18 fundec: FUNCTION ID LPAREN tyfields RPAREN EQ exp
   19       | FUNCTION ID LPAREN tyfields RPAREN COLON ID EQ exp

   20 fundecs: fundec
   21        | fundec fundecs

   22 lvalue: ID
   23       | lvalue DOT ID
   24       | ID LBRACK exp RBRACK
   25       | lvalue DOT ID LBRACK exp RBRACK

   26 exp: lvalue
   27    | BREAK
   28    | NIL
   29    | LPAREN explist RPAREN
   30    | INT
   31    | FLOAT
   32    | STRING
   33    | ID LPAREN paras RPAREN

   34 paras: %empty
   35      | exp
   36      | exp COMMA paras

   37 exp: exp PLUS exp
   38    | exp MINUS exp
   39    | exp TIMES exp
   40    | exp DIVIDE exp
   41    | MINUS exp
   42    | exp EQ exp
   43    | exp NEQ exp
   44    | exp GT exp
   45    | exp LT exp
   46    | exp GE exp
   47    | exp LE exp
   48    | exp AND exp
   49    | exp OR exp
   50    | ID LBRACE efields RBRACE

   51 efields: %empty
   52        | ID EQ exp
   53        | ID EQ exp COMMA efields

   54 exp: ID LBRACK exp RBRACK OF exp
   55    | IF exp THEN exp ELSE exp
   56    | IF exp THEN exp
   57    | lvalue ASSIGN exp
   58    | WHILE exp DO exp
   59    | FOR ID ASSIGN exp TO exp DO exp
   60    | LET decs IN explist END

   61 explist: %empty
   62        | exp
   63        | exp SEMICOLON explist


Terminais, com as regras onde eles aparecem

$end (0) 0
error (256)
ID <sval> (258) 7 10 12 14 15 16 17 18 19 22 23 24 25 33 50 52 53 54
    59
STRING <sval> (259) 32
INT <ival> (260) 30
FLOAT <fval> (261) 31
COMMA (262) 15 36 53
COLON (263) 14 15 17 19
SEMICOLON (264) 63
LPAREN (265) 18 19 29 33
RPAREN (266) 18 19 29 33
LBRACK (267) 24 25 54
RBRACK (268) 24 25 54
LBRACE (269) 11 50
RBRACE (270) 11 50
DOT (271) 23 25
PLUS (272) 37
MINUS (273) 38 41
TIMES (274) 39
DIVIDE (275) 40
EQ (276) 7 18 19 42 52 53
NEQ (277) 43
LT (278) 45
LE (279) 47
GT (280) 44
GE (281) 46
AND (282) 48
OR (283) 49
ASSIGN (284) 16 17 57 59
ARRAY (285) 12
IF (286) 55 56
THEN (287) 55 56
ELSE (288) 55
WHILE (289) 58
FOR (290) 59
TO (291) 59
DO (292) 58 59
LET (293) 60
IN (294) 60
END (295) 60
OF (296) 12 54
BREAK (297) 27
NIL (298) 28
FUNCTION (299) 18 19
VAR (300) 16 17
TYPE (301) 7
LOW (302)
UMINUS (303)


Não terminais com as regras onde eles aparecem

$accept (49)
    à esquerda: 0
program <exp> (50)
    à esquerda: 1, à direita: 0
decs <decs> (51)
    à esquerda: 2 3, à direita: 2 60
dec <dec> (52)
    à esquerda: 4 5 6, à direita: 2 3
tydec <namety> (53)
    à esquerda: 7, à direita: 8 9
tydecs <nametys> (54)
    à esquerda: 8 9, à direita: 4 9
ty <ty> (55)
    à esquerda: 10 11 12, à direita: 7
tyfields <fields> (56)
    à esquerda: 13 14 15, à direita: 11 15 18 19
vardec <dec> (57)
    à esquerda: 16 17, à direita: 5
fundec <fundec> (58)
    à esquerda: 18 19, à direita: 20 21
fundecs <fundecs> (59)
    à esquerda: 20 21, à direita: 6 21
lvalue <var> (60)
    à esquerda: 22 23 24 25, à direita: 23 25 26 57
exp <exp> (61)
    à esquerda: 26 27 28 29 30 31 32 33 37 38 39 40 41 42 43 44 45
    46 47 48 49 50 54 55 56 57 58 59 60, à direita: 1 16 17 18 19
    24 25 35 36 37 38 39 40 41 42 43 44 45 46 47 48 49 52 53 54 55
    56 57 58 59 62 63
paras <exps> (62)
    à esquerda: 34 35 36, à direita: 33 36
efields <efields> (63)
    à esquerda: 51 52 53, à direita: 50 53
explist <exps> (64)
    à esquerda: 61 62 63, à direita: 29 60 63


Estado 0

    0 $accept: . program $end

    ID      deslocar, e ir ao estado 1
    STRING  deslocar, e ir ao estado 2
    INT     deslocar, e ir ao estado 3
    FLOAT   deslocar, e ir ao estado 4
    LPAREN  deslocar, e ir ao estado 5
    MINUS   deslocar, e ir ao estado 6
    IF      deslocar, e ir ao estado 7
    WHILE   deslocar, e ir ao estado 8
    FOR     deslocar, e ir ao estado 9
    LET     deslocar, e ir ao estado 10
    BREAK   deslocar, e ir ao estado 11
    NIL     deslocar, e ir ao estado 12

    program  ir ao estado 13
    lvalue   ir ao estado 14
    exp      ir ao estado 15


Estado 1

   22 lvalue: ID .
   24       | ID . LBRACK exp RBRACK
   33 exp: ID . LPAREN paras RPAREN
   50    | ID . LBRACE efields RBRACE
   54    | ID . LBRACK exp RBRACK OF exp

    LPAREN  deslocar, e ir ao estado 16
    LBRACK  deslocar, e ir ao estado 17
    LBRACE  deslocar, e ir ao estado 18

    $padrão  reduzir usando a regra 22 (lvalue)


Estado 2

   32 exp: STRING .

    $padrão  reduzir usando a regra 32 (exp)


Estado 3

   30 exp: INT .

    $padrão  reduzir usando a regra 30 (exp)


Estado 4

   31 exp: FLOAT .

    $padrão  reduzir usando a regra 31 (exp)


Estado 5

   29 exp: LPAREN . explist RPAREN

    ID      deslocar, e ir ao estado 1
    STRING  deslocar, e ir ao estado 2
    INT     deslocar, e ir ao estado 3
    FLOAT   deslocar, e ir ao estado 4
    LPAREN  deslocar, e ir ao estado 5
    MINUS   deslocar, e ir ao estado 6
    IF      deslocar, e ir ao estado 7
    WHILE   deslocar, e ir ao estado 8
    FOR     deslocar, e ir ao estado 9
    LET     deslocar, e ir ao estado 10
    BREAK   deslocar, e ir ao estado 11
    NIL     deslocar, e ir ao estado 12

    $padrão  reduzir usando a regra 61 (explist)

    lvalue   ir ao estado 14
    exp      ir ao estado 19
    explist  ir ao estado 20


Estado 6

   41 exp: MINUS . exp

    ID      deslocar, e ir ao estado 1
    STRING  deslocar, e ir ao estado 2
    INT     deslocar, e ir ao estado 3
    FLOAT   deslocar, e ir ao estado 4
    LPAREN  deslocar, e ir ao estado 5
    MINUS   deslocar, e ir ao estado 6
    IF      deslocar, e ir ao estado 7
    WHILE   deslocar, e ir ao estado 8
    FOR     deslocar, e ir ao estado 9
    LET     deslocar, e ir ao estado 10
    BREAK   deslocar, e ir ao estado 11
    NIL     deslocar, e ir ao estado 12

    lvalue  ir ao estado 14
    exp     ir ao estado 21


Estado 7

   55 exp: IF . exp THEN exp ELSE exp
   56    | IF . exp THEN exp

    ID      deslocar, e ir ao estado 1
    STRING  deslocar, e ir ao estado 2
    INT     deslocar, e ir ao estado 3
    FLOAT   deslocar, e ir ao estado 4
    LPAREN  deslocar, e ir ao estado 5
    MINUS   deslocar, e ir ao estado 6
    IF      deslocar, e ir ao estado 7
    WHILE   deslocar, e ir ao estado 8
    FOR     deslocar, e ir ao estado 9
    LET     deslocar, e ir ao estado 10
    BREAK   deslocar, e ir ao estado 11
    NIL     deslocar, e ir ao estado 12

    lvalue  ir ao estado 14
    exp     ir ao estado 22


Estado 8

   58 exp: WHILE . exp DO exp

    ID      deslocar, e ir ao estado 1
    STRING  deslocar, e ir ao estado 2
    INT     deslocar, e ir ao estado 3
    FLOAT   deslocar, e ir ao estado 4
    LPAREN  deslocar, e ir ao estado 5
    MINUS   deslocar, e ir ao estado 6
    IF      deslocar, e ir ao estado 7
    WHILE   deslocar, e ir ao estado 8
    FOR     deslocar, e ir ao estado 9
    LET     deslocar, e ir ao estado 10
    BREAK   deslocar, e ir ao estado 11
    NIL     deslocar, e ir ao estado 12

    lvalue  ir ao estado 14
    exp     ir ao estado 23


Estado 9

   59 exp: FOR . ID ASSIGN exp TO exp DO exp

    ID  deslocar, e ir ao estado 24


Estado 10

   60 exp: LET . decs IN explist END

    FUNCTION  deslocar, e ir ao estado 25
    VAR       deslocar, e ir ao estado 26
    TYPE      deslocar, e ir ao estado 27

    decs     ir ao estado 28
    dec      ir ao estado 29
    tydec    ir ao estado 30
    tydecs   ir ao estado 31
    vardec   ir ao estado 32
    fundec   ir ao estado 33
    fundecs  ir ao estado 34


Estado 11

   27 exp: BREAK .

    $padrão  reduzir usando a regra 27 (exp)


Estado 12

   28 exp: NIL .

    $padrão  reduzir usando a regra 28 (exp)


Estado 13

    0 $accept: program . $end

    $end  deslocar, e ir ao estado 35


Estado 14

   23 lvalue: lvalue . DOT ID
   25       | lvalue . DOT ID LBRACK exp RBRACK
   26 exp: lvalue .
   57    | lvalue . ASSIGN exp

    DOT     deslocar, e ir ao estado 36
    ASSIGN  deslocar, e ir ao estado 37

    $padrão  reduzir usando a regra 26 (exp)


Estado 15

    1 program: exp .
   37 exp: exp . PLUS exp
   38    | exp . MINUS exp
   39    | exp . TIMES exp
   40    | exp . DIVIDE exp
   42    | exp . EQ exp
   43    | exp . NEQ exp
   44    | exp . GT exp
   45    | exp . LT exp
   46    | exp . GE exp
   47    | exp . LE exp
   48    | exp . AND exp
   49    | exp . OR exp

    PLUS    deslocar, e ir ao estado 38
    MINUS   deslocar, e ir ao estado 39
    TIMES   deslocar, e ir ao estado 40
    DIVIDE  deslocar, e ir ao estado 41
    EQ      deslocar, e ir ao estado 42
    NEQ     deslocar, e ir ao estado 43
    LT      deslocar, e ir ao estado 44
    LE      deslocar, e ir ao estado 45
    GT      deslocar, e ir ao estado 46
    GE      deslocar, e ir ao estado 47
    AND     deslocar, e ir ao estado 48
    OR      deslocar, e ir ao estado 49

    $padrão  reduzir usando a regra 1 (program)


Estado 16

   33 exp: ID LPAREN . paras RPAREN

    ID      deslocar, e ir ao estado 1
    STRING  deslocar, e ir ao estado 2
    INT     deslocar, e ir ao estado 3
    FLOAT   deslocar, e ir ao estado 4
    LPAREN  deslocar, e ir ao estado 5
    MINUS   deslocar, e ir ao estado 6
    IF      deslocar, e ir ao estado 7
    WHILE   deslocar, e ir ao estado 8
    FOR     deslocar, e ir ao estado 9
    LET     deslocar, e ir ao estado 10
    BREAK   deslocar, e ir ao estado 11
    NIL     deslocar, e ir ao estado 12

    $padrão  reduzir usando a regra 34 (paras)

    lvalue  ir ao estado 14
    exp     ir ao estado 50
    paras   ir ao estado 51


Estado 17

   24 lvalue: ID LBRACK . exp RBRACK
   54 exp: ID LBRACK . exp RBRACK OF exp

    ID      deslocar, e ir ao estado 1
    STRING  deslocar, e ir ao estado 2
    INT     deslocar, e ir ao estado 3
    FLOAT   deslocar, e ir ao estado 4
    LPAREN  deslocar, e ir ao estado 5
    MINUS   deslocar, e ir ao estado 6
    IF      deslocar, e ir ao estado 7
    WHILE   deslocar, e ir ao estado 8
    FOR     deslocar, e ir ao estado 9
    LET     deslocar, e ir ao estado 10
    BREAK   deslocar, e ir ao estado 11
    NIL     deslocar, e ir ao estado 12

    lvalue  ir ao estado 14
    exp     ir ao estado 52


Estado 18

   50 exp: ID LBRACE . efields RBRACE

    ID  deslocar, e ir ao estado 53

    $padrão  reduzir usando a regra 51 (efields)

    efields  ir ao estado 54


Estado 19

   37 exp: exp . PLUS exp
   38    | exp . MINUS exp
   39    | exp . TIMES exp
   40    | exp . DIVIDE exp
   42    | exp . EQ exp
   43    | exp . NEQ exp
   44    | exp . GT exp
   45    | exp . LT exp
   46    | exp . GE exp
   47    | exp . LE exp
   48    | exp . AND exp
   49    | exp . OR exp
   62 explist: exp .
   63        | exp . SEMICOLON explist

    SEMICOLON  deslocar, e ir ao estado 55
    PLUS       deslocar, e ir ao estado 38
    MINUS      deslocar, e ir ao estado 39
    TIMES      deslocar, e ir ao estado 40
    DIVIDE     deslocar, e ir ao estado 41
    EQ         deslocar, e ir ao estado 42
    NEQ        deslocar, e ir ao estado 43
    LT         deslocar, e ir ao estado 44
    LE         deslocar, e ir ao estado 45
    GT         deslocar, e ir ao estado 46
    GE         deslocar, e ir ao estado 47
    AND        deslocar, e ir ao estado 48
    OR         deslocar, e ir ao estado 49

    $padrão  reduzir usando a regra 62 (explist)


Estado 20

   29 exp: LPAREN explist . RPAREN

    RPAREN  deslocar, e ir ao estado 56


Estado 21

   37 exp: exp . PLUS exp
   38    | exp . MINUS exp
   39    | exp . TIMES exp
   40    | exp . DIVIDE exp
   41    | MINUS exp .
   42    | exp . EQ exp
   43    | exp . NEQ exp
   44    | exp . GT exp
   45    | exp . LT exp
   46    | exp . GE exp
   47    | exp . LE exp
   48    | exp . AND exp
   49    | exp . OR exp

    $padrão  reduzir usando a regra 41 (exp)


Estado 22

   37 exp: exp . PLUS exp
   38    | exp . MINUS exp
   39    | exp . TIMES exp
   40    | exp . DIVIDE exp
   42    | exp . EQ exp
   43    | exp . NEQ exp
   44    | exp . GT exp
   45    | exp . LT exp
   46    | exp . GE exp
   47    | exp . LE exp
   48    | exp . AND exp
   49    | exp . OR exp
   55    | IF exp . THEN exp ELSE exp
   56    | IF exp . THEN exp

    PLUS    deslocar, e ir ao estado 38
    MINUS   deslocar, e ir ao estado 39
    TIMES   deslocar, e ir ao estado 40
    DIVIDE  deslocar, e ir ao estado 41
    EQ      deslocar, e ir ao estado 42
    NEQ     deslocar, e ir ao estado 43
    LT      deslocar, e ir ao estado 44
    LE      deslocar, e ir ao estado 45
    GT      deslocar, e ir ao estado 46
    GE      deslocar, e ir ao estado 47
    AND     deslocar, e ir ao estado 48
    OR      deslocar, e ir ao estado 49
    THEN    deslocar, e ir ao estado 57


Estado 23

   37 exp: exp . PLUS exp
   38    | exp . MINUS exp
   39    | exp . TIMES exp
   40    | exp . DIVIDE exp
   42    | exp . EQ exp
   43    | exp . NEQ exp
   44    | exp . GT exp
   45    | exp . LT exp
   46    | exp . GE exp
   47    | exp . LE exp
   48    | exp . AND exp
   49    | exp . OR exp
   58    | WHILE exp . DO exp

    PLUS    deslocar, e ir ao estado 38
    MINUS   deslocar, e ir ao estado 39
    TIMES   deslocar, e ir ao estado 40
    DIVIDE  deslocar, e ir ao estado 41
    EQ      deslocar, e ir ao estado 42
    NEQ     deslocar, e ir ao estado 43
    LT      deslocar, e ir ao estado 44
    LE      deslocar, e ir ao estado 45
    GT      deslocar, e ir ao estado 46
    GE      deslocar, e ir ao estado 47
    AND     deslocar, e ir ao estado 48
    OR      deslocar, e ir ao estado 49
    DO      deslocar, e ir ao estado 58


Estado 24

   59 exp: FOR ID . ASSIGN exp TO exp DO exp

    ASSIGN  deslocar, e ir ao estado 59


Estado 25

   18 fundec: FUNCTION . ID LPAREN tyfields RPAREN EQ exp
   19       | FUNCTION . ID LPAREN tyfields RPAREN COLON ID EQ exp

    ID  deslocar, e ir ao estado 60


Estado 26

   16 vardec: VAR . ID ASSIGN exp
   17       | VAR . ID COLON ID ASSIGN exp

    ID  deslocar, e ir ao estado 61


Estado 27

    7 tydec: TYPE . ID EQ ty

    ID  deslocar, e ir ao estado 62


Estado 28

   60 exp: LET decs . IN explist END

    IN  deslocar, e ir ao estado 63


Estado 29

    2 decs: dec . decs
    3     | dec .

    FUNCTION  deslocar, e ir ao estado 25
    VAR       deslocar, e ir ao estado 26
    TYPE      deslocar, e ir ao estado 27

    $padrão  reduzir usando a regra 3 (decs)

    decs     ir ao estado 64
    dec      ir ao estado 29
    tydec    ir ao estado 30
    tydecs   ir ao estado 31
    vardec   ir ao estado 32
    fundec   ir ao estado 33
    fundecs  ir ao estado 34


Estado 30

    8 tydecs: tydec .
    9       | tydec . tydecs

    TYPE  deslocar, e ir ao estado 27

    $padrão  reduzir usando a regra 8 (tydecs)

    tydec   ir ao estado 30
    tydecs  ir ao estado 65


Estado 31

    4 dec: tydecs .

    $padrão  reduzir usando a regra 4 (dec)


Estado 32

    5 dec: vardec .

    $padrão  reduzir usando a regra 5 (dec)


Estado 33

   20 fundecs: fundec .
   21        | fundec . fundecs

    FUNCTION  deslocar, e ir ao estado 25

    $padrão  reduzir usando a regra 20 (fundecs)

    fundec   ir ao estado 33
    fundecs  ir ao estado 66


Estado 34

    6 dec: fundecs .

    $padrão  reduzir usando a regra 6 (dec)


Estado 35

    0 $accept: program $end .

    $padrão  aceitar


Estado 36

   23 lvalue: lvalue DOT . ID
   25       | lvalue DOT . ID LBRACK exp RBRACK

    ID  deslocar, e ir ao estado 67


Estado 37

   57 exp: lvalue ASSIGN . exp

    ID      deslocar, e ir ao estado 1
    STRING  deslocar, e ir ao estado 2
    INT     deslocar, e ir ao estado 3
    FLOAT   deslocar, e ir ao estado 4
    LPAREN  deslocar, e ir ao estado 5
    MINUS   deslocar, e ir ao estado 6
    IF      deslocar, e ir ao estado 7
    WHILE   deslocar, e ir ao estado 8
    FOR     deslocar, e ir ao estado 9
    LET     deslocar, e ir ao estado 10
    BREAK   deslocar, e ir ao estado 11
    NIL     deslocar, e ir ao estado 12

    lvalue  ir ao estado 14
    exp     ir ao estado 68


Estado 38

   37 exp: exp PLUS . exp

    ID      deslocar, e ir ao estado 1
    STRING  deslocar, e ir ao estado 2
    INT     deslocar, e ir ao estado 3
    FLOAT   deslocar, e ir ao estado 4
    LPAREN  deslocar, e ir ao estado 5
    MINUS   deslocar, e ir ao estado 6
    IF      deslocar, e ir ao estado 7
    WHILE   deslocar, e ir ao estado 8
    FOR     deslocar, e ir ao estado 9
    LET     deslocar, e ir ao estado 10
    BREAK   deslocar, e ir ao estado 11
    NIL     deslocar, e ir ao estado 12

    lvalue  ir ao estado 14
    exp     ir ao estado 69


Estado 39

   38 exp: exp MINUS . exp

    ID      deslocar, e ir ao estado 1
    STRING  deslocar, e ir ao estado 2
    INT     deslocar, e ir ao estado 3
    FLOAT   deslocar, e ir ao estado 4
    LPAREN  deslocar, e ir ao estado 5
    MINUS   deslocar, e ir ao estado 6
    IF      deslocar, e ir ao estado 7
    WHILE   deslocar, e ir ao estado 8
    FOR     deslocar, e ir ao estado 9
    LET     deslocar, e ir ao estado 10
    BREAK   deslocar, e ir ao estado 11
    NIL     deslocar, e ir ao estado 12

    lvalue  ir ao estado 14
    exp     ir ao estado 70


Estado 40

   39 exp: exp TIMES . exp

    ID      deslocar, e ir ao estado 1
    STRING  deslocar, e ir ao estado 2
    INT     deslocar, e ir ao estado 3
    FLOAT   deslocar, e ir ao estado 4
    LPAREN  deslocar, e ir ao estado 5
    MINUS   deslocar, e ir ao estado 6
    IF      deslocar, e ir ao estado 7
    WHILE   deslocar, e ir ao estado 8
    FOR     deslocar, e ir ao estado 9
    LET     deslocar, e ir ao estado 10
    BREAK   deslocar, e ir ao estado 11
    NIL     deslocar, e ir ao estado 12

    lvalue  ir ao estado 14
    exp     ir ao estado 71


Estado 41

   40 exp: exp DIVIDE . exp

    ID      deslocar, e ir ao estado 1
    STRING  deslocar, e ir ao estado 2
    INT     deslocar, e ir ao estado 3
    FLOAT   deslocar, e ir ao estado 4
    LPAREN  deslocar, e ir ao estado 5
    MINUS   deslocar, e ir ao estado 6
    IF      deslocar, e ir ao estado 7
    WHILE   deslocar, e ir ao estado 8
    FOR     deslocar, e ir ao estado 9
    LET     deslocar, e ir ao estado 10
    BREAK   deslocar, e ir ao estado 11
    NIL     deslocar, e ir ao estado 12

    lvalue  ir ao estado 14
    exp     ir ao estado 72


Estado 42

   42 exp: exp EQ . exp

    ID      deslocar, e ir ao estado 1
    STRING  deslocar, e ir ao estado 2
    INT     deslocar, e ir ao estado 3
    FLOAT   deslocar, e ir ao estado 4
    LPAREN  deslocar, e ir ao estado 5
    MINUS   deslocar, e ir ao estado 6
    IF      deslocar, e ir ao estado 7
    WHILE   deslocar, e ir ao estado 8
    FOR     deslocar, e ir ao estado 9
    LET     deslocar, e ir ao estado 10
    BREAK   deslocar, e ir ao estado 11
    NIL     deslocar, e ir ao estado 12

    lvalue  ir ao estado 14
    exp     ir ao estado 73


Estado 43

   43 exp: exp NEQ . exp

    ID      deslocar, e ir ao estado 1
    STRING  deslocar, e ir ao estado 2
    INT     deslocar, e ir ao estado 3
    FLOAT   deslocar, e ir ao estado 4
    LPAREN  deslocar, e ir ao estado 5
    MINUS   deslocar, e ir ao estado 6
    IF      deslocar, e ir ao estado 7
    WHILE   deslocar, e ir ao estado 8
    FOR     deslocar, e ir ao estado 9
    LET     deslocar, e ir ao estado 10
    BREAK   deslocar, e ir ao estado 11
    NIL     deslocar, e ir ao estado 12

    lvalue  ir ao estado 14
    exp     ir ao estado 74


Estado 44

   45 exp: exp LT . exp

    ID      deslocar, e ir ao estado 1
    STRING  deslocar, e ir ao estado 2
    INT     deslocar, e ir ao estado 3
    FLOAT   deslocar, e ir ao estado 4
    LPAREN  deslocar, e ir ao estado 5
    MINUS   deslocar, e ir ao estado 6
    IF      deslocar, e ir ao estado 7
    WHILE   deslocar, e ir ao estado 8
    FOR     deslocar, e ir ao estado 9
    LET     deslocar, e ir ao estado 10
    BREAK   deslocar, e ir ao estado 11
    NIL     deslocar, e ir ao estado 12

    lvalue  ir ao estado 14
    exp     ir ao estado 75


Estado 45

   47 exp: exp LE . exp

    ID      deslocar, e ir ao estado 1
    STRING  deslocar, e ir ao estado 2
    INT     deslocar, e ir ao estado 3
    FLOAT   deslocar, e ir ao estado 4
    LPAREN  deslocar, e ir ao estado 5
    MINUS   deslocar, e ir ao estado 6
    IF      deslocar, e ir ao estado 7
    WHILE   deslocar, e ir ao estado 8
    FOR     deslocar, e ir ao estado 9
    LET     deslocar, e ir ao estado 10
    BREAK   deslocar, e ir ao estado 11
    NIL     deslocar, e ir ao estado 12

    lvalue  ir ao estado 14
    exp     ir ao estado 76


Estado 46

   44 exp: exp GT . exp
